--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,10 @@
     <color name="recovered">#66BB6A</color>
     <color name="deaths">#EF5350</color>
     <color name="active">#29B6F6</color>
+
+    <color name="red">#FF0000</color>
+    <color name="green1">#008000</color>
+    <color name="green">#90EE90</color>
+    <color name="orange">#FFA500</color>
+    <color name="date_colour">#C0C0C0</color>
 </resources>
